--- a/package.json
+++ b/package.json
@@ -3,5 +3,15 @@
   "name": "baymax",
   "author": "chiel",
   "repository": "baymax-dev/baymax",
-  "license": "MIT"
+  "license": "MIT",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
+    "husky": "^4.2.5"
+  }
 }
