--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,12 @@ indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[package.json]
+indent_style = space
+
 [*.md]
 indent_style = space
 trim_trailing_whitespace = false
+
+[*.yaml]
+indent_style = space
