--- a/package.json
+++ b/package.json
@@ -4,14 +4,29 @@
   "author": "chiel",
   "repository": "baymax-dev/baymax",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint --ext .js,.ts ."
+  },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*.js": "eslint",
+    "*.ts": "eslint"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
     "@commitlint/config-conventional": "^9.1.2",
-    "husky": "^4.2.5"
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.13",
+    "typescript": "^4.0.2"
   }
 }
